manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.68.13"],"port":80,"protocol":"HTTP","serviceName":"default:hls-dinner","ingressName":"default:dinner-ingress","hostname":"dinner.api.99.suyiiyii.top","path":"/","allNodes":false}]
  creationTimestamp: '2024-04-08T15:49:02Z'
  generation: 1
  name: dinner-ingress
  namespace: default
  resourceVersion: '47416'
  uid: 79c6ef9c-2ef6-47b6-9bc4-4bd65158e050
spec:
  ingressClassName: traefik
  rules:
    - host: dinner.api.99.suyiiyii.top
      http:
        paths:
          - backend:
              service:
                name: hls-dinner
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 192.168.68.13
